Modified the calculator

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
   <div class="calc">
+    <div class="btn_point">
+      <div class="point bg_point_red"></div>
+      <div class="point bg_point_yellow"></div>
+      <div class="point bg_point_green"></div>
+    </div>
     <div class="calc_screen">
       <p>0</p>
     </div>
