--- a/index.html
+++ b/index.html
@@ -2,48 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Калькулятор</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <title>Calculator</title>
+  <link rel="icon" href="./img/calc_icons.png">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <div class="calc">
+  <div class="calculator">
+
     <div class="btn_point">
       <div class="point bg_point_red"></div>
       <div class="point bg_point_yellow"></div>
       <div class="point bg_point_green"></div>
     </div>
+
     <div class="calc_screen">
       <p>0</p>
     </div>
+
     <div class="buttons">
-      <div class="btn ac bg_gray">ac</div>
-      <div class="btn plus_minus bg_gray">+/-</div>
-      <div class="btn percent bg_gray">%</div>
-      <div class="btn division bg_orange">/</div>
+      <div class="btn bg_btn_gray">ac</div>
+      <div class="btn bg_btn_gray">+/-</div>
+      <div class="btn bg_btn_gray">%</div>
+      <div class="btn bg_btn_orange">/</div>
 
-      <div class="btn seven">7</div>
-      <div class="btn eigth">8</div>
-      <div class="btn nine">9</div>
-      <div class="btn multi bg_orange">X</div>
+      <div class="btn">7</div>
+      <div class="btn">8</div>
+      <div class="btn">9</div>
+      <div class="btn bg_btn_orange">*</div>
 
-      <div class="btn four">4</div>
-      <div class="btn five">5</div>
-      <div class="btn six">6</div>
-      <div class="btn minus bg_orange">-</div>
+      <div class="btn">4</div>
+      <div class="btn">5</div>
+      <div class="btn">6</div>
+      <div class="btn bg_btn_orange">-</div>
 
-      <div class="btn one">1</div>
-      <div class="btn two">2</div>
-      <div class="btn three">3</div>
-      <div class="btn plus bg_orange">+</div>
+      <div class="btn">1</div>
+      <div class="btn">2</div>
+      <div class="btn">3</div>
+      <div class="btn bg_btn_orange">+</div>
 
       <div class="btn zero">0</div>
-      <div class="btn dot">.</div>
-      <div class="btn equal bg_orange">=</div>
+      <div class="btn">.</div>
+      <div class="btn equal bg_btn_orange">=</div>
     </div>
   </div>
-  <script src="js/index.js"></script>
-  <!-- <script src="js/index2.js"></script> -->
 </body>
 </html>
