--- a/index.html
+++ b/index.html
@@ -16,35 +16,156 @@
       <div class="point bg_point_green"></div>
     </div>
 
-    <div class="calc_screen">
-      <p>0</p>
+    <div class="calc_screen" >
+      <input class="result" type="text" value="0" id="res" disabled>
     </div>
 
     <div class="buttons">
-      <div class="btn bg_btn_gray">ac</div>
-      <div class="btn bg_btn_gray">+/-</div>
-      <div class="btn bg_btn_gray">%</div>
-      <div class="btn bg_btn_orange">/</div>
+      <div class="btn bg_btn_gray" id="ac" onclick="ac()">ac</div>
+      <div class="btn bg_btn_gray" onclick="insert('+/-')">+/-</div>
+      <div class="btn bg_btn_gray" onclick="insert('%')">%</div>
+      <div class="btn bg_btn_orange" onclick="insert('/', true)">/</div>
 
-      <div class="btn">7</div>
-      <div class="btn">8</div>
-      <div class="btn">9</div>
-      <div class="btn bg_btn_orange">*</div>
+      <div class="btn" onclick="insert('7')">7</div>
+      <div class="btn" onclick="insert('8')">8</div>
+      <div class="btn" onclick="insert('9')">9</div>
+      <div class="btn bg_btn_orange" onclick="insert('*', true)">*</div>
 
-      <div class="btn">4</div>
-      <div class="btn">5</div>
-      <div class="btn">6</div>
-      <div class="btn bg_btn_orange">-</div>
+      <div class="btn" onclick="insert('4')">4</div>
+      <div class="btn" onclick="insert('5')">5</div>
+      <div class="btn" onclick="insert('6')">6</div>
+      <div class="btn bg_btn_orange" onclick="insert('-', true)">-</div>
 
-      <div class="btn">1</div>
-      <div class="btn">2</div>
-      <div class="btn">3</div>
-      <div class="btn bg_btn_orange">+</div>
+      <div class="btn" onclick="insert('1')">1</div>
+      <div class="btn" onclick="insert('2')">2</div>
+      <div class="btn" onclick="insert('3')">3</div>
+      <div class="btn bg_btn_orange" onclick="insert('+', true)">+</div>
 
-      <div class="btn zero">0</div>
-      <div class="btn">.</div>
-      <div class="btn equal bg_btn_orange">=</div>
+      <div class="btn zero" onclick="insert('0')">0</div>
+      <div class="btn" onclick="insert('.')">.</div>
+      <div class="btn equal bg_btn_orange" onclick="equal()">=</div>
     </div>
   </div>
+<script>
+  let isLastEqual = false;
+  function equal() {
+    const input = document.getElementById('res').value;
+    const resultNumber = input.split(/\+|\-|\*|\//);
+    const [operator] = input.match(/\+|\-|\*|\//);
+
+    const obj = {
+      "+": (num1, num2) => (num1 + num2),
+      "-": (num1, num2) => (num1 - num2),
+      "*": (num1, num2) => Math.round((num1 * num2) * 10000)/10000,
+      "/": (num1, num2) => Math.round((num1 / num2)*10000)/10000,
+    }
+    const num1 = parseFloat(resultNumber[0]);
+    const num2 = parseFloat(resultNumber[1]); 
+    
+    if (isNaN(num1) && isNaN(num2)) {
+      alert('Your number is not valid!');
+    }
+    if (operator && !isNaN(num1) && !isNaN(num2) && resultNumber.length == 2) {
+      document.getElementById('res').value = (obj[operator](num1, num2));
+      isLastEqual = true;
+    }
+
+
+    if (resultNumber.length > 2) {
+      const input = document.getElementById('res').value;
+      // ((...args) => { console.log(args) })(...input)
+
+      const resultNumber = input.split('');
+      console.log(input);
+      console.log(resultNumber);
+      
+       for (let i = 0; i < resultNumber.length; i++) {
+
+        if(resultNumber.includes('*')) {
+          const firstOperation = resultNumber.findIndex(item => item == '*');
+          const previousNumber = Number(resultNumber[firstOperation - 1]);
+          const afterNumber = Number(resultNumber[firstOperation + 1]);
+          console.log(previousNumber);
+          console.log(afterNumber);
+
+          if (firstOperation && !isNaN(previousNumber) && !isNaN(afterNumber)) {
+            const a = String(previousNumber * afterNumber);
+            console.log(a);
+            resultNumber.splice(firstOperation - 1, 3, a);
+            console.log(resultNumber);
+            document.getElementById('res').value = a;
+          }
+        }
+        if (resultNumber.includes('/')) {
+          const firstOperation = resultNumber.findIndex(item => item == '/');
+          const previousNumber = Number(resultNumber[firstOperation - 1]);
+          const afterNumber = Number(resultNumber[firstOperation + 1]);
+          console.log(previousNumber);
+          console.log(afterNumber);
+
+          if (firstOperation && !isNaN(previousNumber) && !isNaN(afterNumber)) {
+            const a = String(previousNumber / afterNumber);
+            console.log(a);
+            resultNumber.splice(firstOperation - 1, 3, a);
+            console.log(resultNumber);
+            document.getElementById('res').value = a;
+          }
+        }
+        if (resultNumber.includes('-')) {
+          const firstOperation = resultNumber.findIndex(item => item == '-');
+          const previousNumber = Number(resultNumber[firstOperation - 1]);
+          const afterNumber = Number(resultNumber[firstOperation + 1]);
+          console.log(previousNumber);
+          console.log(afterNumber);
+
+          if (firstOperation && !isNaN(previousNumber) && !isNaN(afterNumber)) {
+            const a = String(previousNumber - afterNumber);
+            console.log(a);
+            resultNumber.splice(firstOperation - 1, 3, a);
+            console.log(resultNumber);
+            document.getElementById('res').value = a;
+          }
+        }
+        if (resultNumber.includes('+')) {
+          const firstOperation = resultNumber.findIndex(item => item == '+');
+          const previousNumber = Number(resultNumber[firstOperation - 1]);
+          const afterNumber = Number(resultNumber[firstOperation + 1]);
+          console.log(previousNumber);
+          console.log(afterNumber);
+
+          if (firstOperation && !isNaN(previousNumber) && !isNaN(afterNumber)) {
+            const a = String(previousNumber + afterNumber);
+            console.log(a);
+            resultNumber.splice(firstOperation - 1, 3, a);
+            console.log(resultNumber);
+            document.getElementById('res').value = a;
+          }
+        }
+      }
+    }
+  }
+
+
+  function insert(num, notNumber) {
+    if (isLastEqual && !notNumber) {
+      ac();
+    }
+    isLastEqual = false;
+    if (num === '.') {
+      document.getElementById('res').value += num;
+      return;
+    }
+    if (document.getElementById('res').value === '0') {
+      document.getElementById('res').value = num;
+    }
+    else {
+      document.getElementById('res').value += num;
+    }
+  }
+
+  function ac() {
+    document.getElementById('res').value = '0';
+  }
+</script>
 </body>
 </html>
